--- a/SRC.html
+++ b/SRC.html
@@ -20,7 +20,7 @@
         <li><a href="index.html"><img height="150px" src="img/SRC logo.png" alt=""></a></li>
         <li><a href="SRC.html">2022/2023 SRC</a></li>
         <li><a href="Form.html">Suggestions</a></li>
-        <li><a href="#">Orientation</a></li>
+        <li><a href="orientation.html">Orientation</a></li>
         <li><a href="Clubs.html">Clubs</a></li>
       </ul>
     </div>
