--- a/orientation.html
+++ b/orientation.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="orientation.css"
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="orientation.css">
 </head>
 
 
    <body>
-     <div class="orvid">
-       <iframe width="65%" height="400" src="https://www.youtube.com/embed/Oj1RQ2X_-Xw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
 
-       </iframe>
-       </div>
-
-
-       <div class="shrek">
-       <p>Steve Harwell:
-        ♪ Somebody once told me the world is gonna roll me, I ain't the sharpest tool in the shed. She was lookin' kind of dumb with her finger and her thumb in the shape of an "L" on her forehead. The years start comin', and they don't stop comin', fed to the rules and I hit the ground runnin', didn't make sense not to live for fun. Your brain gets smart but your head gets dumb. So much to do, so much to see, so what's wrong with takin' the backstreets. You'll never know if you don't go, you'll never shine if you don't glow. Hey, now, you're an all-star. Get your game on, go play. Hey, now, you're a rock star. Get the show on, get paid. And all that glitters is gold, only shootin' stars break the mold. It's a cool place, and they say it gets colder, you're bundled up now, but wait till you get older. But the meteor men beg to differ judging by the hole in the satellite picture. The ice we skate is gettin' pretty thin, the water's getting warm so you might as well swim. My world's on fire, how 'bout yours? That's the way I like it and I'll never get bored. Hey, now, you're an all-star. ♪
-      </p>
+    
+    <h1>Orientation</h1>
+     <video class="orientation-vid" src="" width="60%"></video>
    </div>
+
+   <h4>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium saepe quos tempora praesentium laboriosam debitis sunt! Quia sunt molestias quos debitis tempore excepturi harum vero itaque ullam iusto enim, aliquid distinctio at voluptas doloremque minus ut corporis rerum nostrum atque facere doloribus architecto voluptate? Harum omnis architecto, quas, sint explicabo qui deleniti possimus natus ad aliquam dolor quia hic corporis voluptates cum nesciunt atque eaque doloremque commodi beatae error provident, ipsam consequuntur deserunt! Nostrum fugiat ipsum in necessitatibus a, aspernatur aperiam repellat. Enim, possimus repudiandae maxime dolorem doloribus, laboriosam nisi autem, quidem sequi unde culpa impedit modi est expedita.
+  </h4>
+
+
+  
 </body>
 
 </html>
