--- a/SRC.html
+++ b/SRC.html
@@ -34,7 +34,7 @@
       <div class="media-scroller snaps-inline">
         <div class="media-element">
           <img src="img/anco.JPG" alt="" />
-          <p class="title">Ayden Herbst</p>
+          <p class="title">Anco de Koning</p>
           <p class="title2">Chairperson</p>
         </div>
         <div class="media-element">
