orientation-page-updated

--- a/orientation.html
+++ b/orientation.html
@@ -17,7 +17,8 @@
    </div>
 
    <h4>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laudantium saepe quos tempora praesentium laboriosam debitis sunt! Quia sunt molestias quos debitis tempore excepturi harum vero itaque ullam iusto enim, aliquid distinctio at voluptas doloremque minus ut corporis rerum nostrum atque facere doloribus architecto voluptate? Harum omnis architecto, quas, sint explicabo qui deleniti possimus natus ad aliquam dolor quia hic corporis voluptates cum nesciunt atque eaque doloremque commodi beatae error provident, ipsam consequuntur deserunt! Nostrum fugiat ipsum in necessitatibus a, aspernatur aperiam repellat. Enim, possimus repudiandae maxime dolorem doloribus, laboriosam nisi autem, quidem sequi unde culpa impedit modi est expedita.
+    Grade 8 Orientation is a two-to-three-week period where teamwork, challenge and determination all come together; students prove that they belong to the high school and undergo many fun and team building exercises to test this.  The 2023 Orientation was one of the most memorable and successful ones yet – beautiful friendships and bonds were formed. Our Grade 8 students are proud PSS High School students, and among many other things, have developed great teamwork, communication and critical thinking skills! 
+We love you Grade 8s!
   </h4>
 
 
