--- a/orientation.html
+++ b/orientation.html
@@ -13,7 +13,7 @@
 
     
     <h1>Orientation</h1>
-     <video class="orientation-vid" src="./Video/orientation.mp4" width="60%"></video>
+     <video class="orientation-vid" src="./Video/2023 First Week Grade 8.mov" width="60%" controls autoplay muted></video>
    </div>
 
    <h4>
