--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero">
       <div class="header-container">
         <p class="null">div</p>
-        <h2>WELCOME TO THE <span class="red">2022/2023</span> WEBSITE</h2>
+        <h2>WELCOME TO THE <span class="red">FoX HEAD PUB</span> WEBSITE</h2>
         <h1>SHOOT FOR THE</h1>
         <h1 class="stars">STARS</h1>
         <a href="./PDF/2023 High School Calendar.pdf"><button>EVENTS</button></a>
