--- a/SRC.html
+++ b/SRC.html
@@ -33,62 +33,62 @@
       <h4>2022/2023 SRC</h4>
       <div class="media-scroller snaps-inline">
         <div class="media-element">
-          <img src="img/anco.JPG" alt="" />
+          <img src="img/anco.JPG" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Anco de Koning</p>
           <p class="title2">Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/Amit van Wyk Cai.JPG" alt="" />
+          <img src="img/Amit van Wyk Cai.JPG" alt="Amit von Wyk Cai, Vice Chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Amit von Wyk Cai</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/Keira Roets.JPG" alt="" />
+          <img src="img/Keira Roets.JPG" alt="Keira Roets, Vice Chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Keira Roets</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/JW Coetzee.JPG" alt="" />
+          <img src="img/JW Coetzee.JPG" alt="JW Coetzee, Head of Sports and Physical recreation of the 2022/2023 PSS SRC" />
           <p class="title">J.W. Coetzee</p>
           <p class="title2">Sports & Physical Recreation</p>
         </div>
         <div class="media-element">
-          <img src="img/Malvin Mashamba.JPG" alt="" />
+          <img src="img/Malvin Mashamba.JPG" alt="Malvin Mashimba, Treasurer of the 2022/2023 PSS SRC" />
           <p class="title">Malvin Mashimba</p>
           <p class="title2">Treasurer</p>
         </div>
         <div class="media-element">
-          <img src="img/Emily Braune.JPG" alt="" />
+          <img src="img/Emily Braune.JPG" alt="Emily Braune, Head of Social and Community of the 2022/2023 PSS SRC" />
           <p class="title">Emily Braune</p>
           <p class="title2">Social & Community</p>
         </div>
         <div class="media-element">
-          <img src="img/Tiara Milne.JPG" alt="" />
+          <img src="img/Tiara Milne.JPG" alt="Tiara Milne, the Public Relations Officer of the 2022/2023 PSS SRC" />
           <p class="title">Tiara Milne</p>
           <p class="title2">Public Relations Officer</p>
         </div>
         <div class="media-element">
-          <img src="img/Valerik Hilbert.JPG" alt="" />
+          <img src="img/Valerik Hilbert.JPG" alt="Valerik Hilbert, the legendary Tuck Shop manager of the 2022/2023 PSS SRC" />
           <p class="title">Valerik Hilbert</p>
           <p class="title2">Tuck Shop Manager</p>
         </div>
         <div class="media-element">
-          <img src="img/Helen Classens.JPG" alt="" />
+          <img src="img/Helen Classens.JPG" alt="Helen Classens, the Secretary of the 2022/2023 PSS SRC" />
           <p class="title">Helen Classens</p>
           <p class="title2">Secretary</p>
         </div>
         <div class="media-element">
-          <img src="img/Michael Meerkotter.JPG" alt="" />
+          <img src="img/Michael Meerkotter.JPG" alt="Michael Meerkotter, the Junior Public relations Officer of the 2022/2023 PSS SRC " />
           <p class="title">Michael Meerkotter</p>
           <p class="title2">Junior Public relations Officer</p>
         </div>
         <div class="media-element">
-          <img src="img/Heike Muller.JPG" alt="" />
+          <img src="img/Heike Muller.JPG" alt="Heike Muller, Junior Treasurer of the PSS SRC " />
           <p class="title">Heike Müller</p>
           <p class="title2">Junior Treasurer</p>
         </div>
         <div class="media-element">
-          <img src="img/Laura Weimann.JPG" alt="" />
+          <img src="img/Laura Weimann.JPG" alt="Laura Weimann, Junior Head of Sports and Physical Recreation of the 2022/2023 PSS SRC" />
           <p class="title">Laura Weimann</p>
           <p class="title2">Junior Sports and Physical Recreation</p>
         </div>
@@ -97,7 +97,7 @@
 
     <div class="intro">
       <div class="left2">
-        <img class="chair-img" src="img\anco.png" alt="Anc0 de K0n1ng" />
+        <img class="chair-img" src="img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
       </div>
       <div class="right2">
         <p class="newlecture">
