--- a/Form.html
+++ b/Form.html
@@ -25,7 +25,7 @@
       <ul>
         <li>
           <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt=""
+            ><img height="150px" src="img/SRC logo.png" alt="The Logo of the SRC"
           /></a>
         </li>
         <li><a href="SRC.html">2022/2023 SRC</a></li>
