--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="hero">
       <div class="header-container">
         <p class="null">div</p>
-        <h2>WELCOME TO THE <span class="red">FoX HEAD PUB</span> WEBSITE</h2>
+        <h2>WELCOME TO THE <span class="red">2022/2023 SRC</span> WEBSITE</h2>
         <h1>SHOOT FOR THE</h1>
         <h1 class="stars">STARS</h1>
         <a href="./PDF/2023 High School Calendar.pdf"><button>EVENTS</button></a>
@@ -40,7 +40,7 @@
 
     <div class="intro">
       <div class="left">
-        <img class="chair-img" src="img\anco.png" alt="Anc0 de K0n1ng" />
+        <img class="chair-img" src="img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
       </div>
       <div class="right">
         <h3>
