--- a/Clubs.html
+++ b/Clubs.html
@@ -26,7 +26,7 @@
       <ul>
         <li>
           <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt=""
+            ><img height="150px" src="img/SRC logo.png" alt="Our Logo"
           /></a>
         </li>
         <li><a href="SRC.html">2022/2023 SRC</a></li>
@@ -40,7 +40,7 @@
       <div class="media-scroller snaps-inline">
         <div class="media-element-clubs">
           <a href="./Clubs/newspaper/newspaper.html"
-            ><img src="img/paper.jpg" alt=""
+            ><img src="img/paper.jpg" alt="Our Newspaper!"
           /></a>
           <p class="title">Newspaper Club</p>
           <p class="title2">Behold the true journalist inside of you.</p>
