--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The Official Website for the SRC of The Private School Swakopmund">
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="img/SRC logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -16,7 +17,7 @@
       <ul>
         <li>
           <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt=""
+            ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
         <li><a href="SRC.html">2022/2023 SRC</a></li>
