--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="shortcut icon" href="img/SRC logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <meta name="google-site-verification" content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE" />
     <title>PSS SRC</title>
   </head>
   <body>
