--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -26,13 +26,13 @@
       <ul>
         <li>
           <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt="Our Logo"
+            ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
-        <li><a href="SRC.html">2022/2023 SRC</a></li>
-        <li><a href="Form.html">Suggestions</a></li>
-        <li><a href="#">Orientation</a></li>
-        <li><a href="Clubs.html">Clubs</a></li>
+        <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
+        <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
+        <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
+        <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
     <div class="gallery">
