--- a/Pages/Orientation/orientation.html
+++ b/Pages/Orientation/orientation.html
@@ -8,12 +8,24 @@
     <link rel="stylesheet" href="orientation.css">
 </head>
 
-
-   <body>
-
+<input type="checkbox" id="active" />
+  <label for="active" class="menu-btn">👆</label>
+<div class="wrapper">
+  <ul>
+    <li>
+      <a href="index.html"
+        ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
+      /></a>
+    </li>
+    <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
+    <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
+    <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
+    <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
+  </ul>
+</div>
     
     <h1>Orientation</h1>
-     <video class="orientation-vid" src="./Video/2023 First Week Grade 8.mov" width="60%" controls autoplay muted></video>
+     <video class="orientation-vid" src="./Video/2023 First Week Grade 8.mp4" width="60%" controls autoplay muted></video>
    </div>
 
    <h4>
