--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
-        <li><a href="SRC.html">2022/2023 SRC</a></li>
-        <li><a href="Form.html">Suggestions</a></li>
-        <li><a href="orientation.html">Orientation</a></li>
-        <li><a href="Clubs.html">Clubs</a></li>
+        <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
+        <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
+        <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
+        <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
 
