--- a/Pages/Orientation/gr8.html
+++ b/Pages/Orientation/gr8.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="orientation.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./orientation.css">
 </head>
 
 <input type="checkbox" id="active" />
-  <label for="active" class="menu-btn">👆</label>
+<label for="active" class="menu-btn">👆</label>
 <div class="wrapper">
   <ul>
     <li>
@@ -17,15 +17,15 @@
         ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
       /></a>
     </li>
-    <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
-    <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
-    <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
-    <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
+    <li><a href="/Pages/SRC/SRC.html">2022/2023 SRC</a></li>
+    <li><a href="/Pages/Suggestions/Form.html">Suggestions</a></li>
+    <li><a href="/Pages/Orientation/gr8.html">Orientation</a></li>
+    <li><a href="/Pages/Clubs/Clubs.html">Clubs</a></li>
   </ul>
 </div>
     
     <h1>Orientation</h1>
-     <video class="orientation-vid" src="./Video/2023 First Week Grade 8.mp4" width="60%" controls autoplay muted></video>
+     <video class="orientation-vid" src="/Video/2023 First Week Grade 8.mp4" width="60%" controls autoplay muted></video>
    </div>
 
    <h4>
