--- a/Pages/Suggestions/Form.html
+++ b/Pages/Suggestions/Form.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="srcstyles.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/Pages/SRC/srcstyles.css" />
     <link rel="shortcut icon" href="img/SRC logo.png" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
@@ -30,7 +30,7 @@
         </li>
         <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
         <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
-        <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
+        <li><a href="Pages/Orientation/gr8.html">Orientation</a></li>
         <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
