--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="The Student Representative Council (SRC) website of the Private School Swakopmund for students to stay informed and engaged with our school community and to help voice our students opinions in addition to promoting participation in our events.">
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="shortcut icon" href="img/SRC logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="shortcut icon" href="/img/SRC logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta name="google-site-verification" content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE" />
     <title>PSS SRC</title>
@@ -21,10 +21,10 @@
             ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
-        <li><a href="Pages/SRC/SRC.html">2022/2023 SRC</a></li>
-        <li><a href="Pages/Suggestions/Form.html">Suggestions</a></li>
-        <li><a href="Pages/Orientation/orientation.html">Orientation</a></li>
-        <li><a href="Pages/Clubs/Clubs.html">Clubs</a></li>
+        <li><a href="/Pages/SRC/SRC.html">2022/2023 SRC</a></li>
+        <li><a href="/Pages/Suggestions/Form.html">Suggestions</a></li>
+        <li><a href="/Pages/Orientation/gr8.html">Orientation</a></li>
+        <li><a href="/Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
 
