--- a/Pages/Orientation/gr8.html
+++ b/Pages/Orientation/gr8.html
@@ -25,7 +25,7 @@
 </div>
     
     <h1>Orientation</h1>
-     <video class="orientation-vid" src="/Video/2023 First Week Grade 8.mp4" width="60%" controls autoplay muted></video>
+     <video class="orientation-vid" src="/Video/2023 First Week Grade 8.mp4" controls autoplay muted></video>
    </div>
 
    <h4>
