--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="./srcstyles.css">
-    <link rel="shortcut icon" href="/img/SRC logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="//img/SRC logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -19,7 +19,7 @@
       <ul>
         <li>
           <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
+            ><img height="150px" src="/img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
         <li><a href="/Pages/SRC/SRC.html">2022/2023 SRC</a></li>
@@ -37,62 +37,62 @@
       <h4>2022/2023 SRC</h4>
       <div class="media-scroller snaps-inline">
         <div class="media-element">
-          <img src="img/anco.JPG" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
+          <img src="/img/anco.JPG" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Anco de Koning</p>
           <p class="title2">Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/Amit van Wyk Cai.JPG" alt="Amit von Wyk Cai, Vice Chairperson of the 2022/2023 PSS SRC" />
+          <img src="/img/Amit van Wyk Cai.JPG" alt="Amit von Wyk Cai, Vice Chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Amit von Wyk Cai</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/Keira Roets.JPG" alt="Keira Roets, Vice Chairperson of the 2022/2023 PSS SRC" />
+          <img src="/img/Keira Roets.JPG" alt="Keira Roets, Vice Chairperson of the 2022/2023 PSS SRC" />
           <p class="title">Keira Roets</p>
           <p class="title2">Vice Chairperson</p>
         </div>
         <div class="media-element">
-          <img src="img/JW Coetzee.JPG" alt="JW Coetzee, Head of Sports and Physical recreation of the 2022/2023 PSS SRC" />
+          <img src="/img/JW Coetzee.JPG" alt="JW Coetzee, Head of Sports and Physical recreation of the 2022/2023 PSS SRC" />
           <p class="title">J.W. Coetzee</p>
           <p class="title2">Sports & Physical Recreation</p>
         </div>
         <div class="media-element">
-          <img src="img/Malvin Mashamba.JPG" alt="Malvin Mashimba, Treasurer of the 2022/2023 PSS SRC" />
+          <img src="/img/Malvin Mashamba.JPG" alt="Malvin Mashimba, Treasurer of the 2022/2023 PSS SRC" />
           <p class="title">Malvin Mashimba</p>
           <p class="title2">Treasurer</p>
         </div>
         <div class="media-element">
-          <img src="img/Emily Braune.JPG" alt="Emily Braune, Head of Social and Community of the 2022/2023 PSS SRC" />
+          <img src="/img/Emily Braune.JPG" alt="Emily Braune, Head of Social and Community of the 2022/2023 PSS SRC" />
           <p class="title">Emily Braune</p>
           <p class="title2">Social & Community</p>
         </div>
         <div class="media-element">
-          <img src="img/Tiara Milne.JPG" alt="Tiara Milne, the Public Relations Officer of the 2022/2023 PSS SRC" />
+          <img src="/img/Tiara Milne.JPG" alt="Tiara Milne, the Public Relations Officer of the 2022/2023 PSS SRC" />
           <p class="title">Tiara Milne</p>
           <p class="title2">Public Relations Officer</p>
         </div>
         <div class="media-element">
-          <img src="img/Valerik Hilbert.JPG" alt="Valerik Hilbert, the legendary Tuck Shop manager of the 2022/2023 PSS SRC" />
+          <img src="/img/Valerik Hilbert.JPG" alt="Valerik Hilbert, the legendary Tuck Shop manager of the 2022/2023 PSS SRC" />
           <p class="title">Valerik Hilbert</p>
           <p class="title2">Tuck Shop Manager</p>
         </div>
         <div class="media-element">
-          <img src="img/Helen Classens.JPG" alt="Helen Classens, the Secretary of the 2022/2023 PSS SRC" />
+          <img src="/img/Helen Classens.JPG" alt="Helen Classens, the Secretary of the 2022/2023 PSS SRC" />
           <p class="title">Helen Classens</p>
           <p class="title2">Secretary</p>
         </div>
         <div class="media-element">
-          <img src="img/Michael Meerkotter.JPG" alt="Michael Meerkotter, the Junior Public relations Officer of the 2022/2023 PSS SRC " />
+          <img src="/img/Michael Meerkotter.JPG" alt="Michael Meerkotter, the Junior Public relations Officer of the 2022/2023 PSS SRC " />
           <p class="title">Michael Meerkotter</p>
           <p class="title2">Junior Public relations Officer</p>
         </div>
         <div class="media-element">
-          <img src="img/Heike Muller.JPG" alt="Heike Muller, Junior Treasurer of the PSS SRC " />
+          <img src="/img/Heike Muller.JPG" alt="Heike Muller, Junior Treasurer of the PSS SRC " />
           <p class="title">Heike Müller</p>
           <p class="title2">Junior Treasurer</p>
         </div>
         <div class="media-element">
-          <img src="img/Laura Weimann.JPG" alt="Laura Weimann, Junior Head of Sports and Physical Recreation of the 2022/2023 PSS SRC" />
+          <img src="/img/Laura Weimann.JPG" alt="Laura Weimann, Junior Head of Sports and Physical Recreation of the 2022/2023 PSS SRC" />
           <p class="title">Laura Weimann</p>
           <p class="title2">Junior Sports and Physical Recreation</p>
         </div>
