More Image bug fixes

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -101,7 +101,7 @@
 
     <div class="intro">
       <div class="left2">
-        <img class="chair-img" src="img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
+        <img class="chair-img" src="/img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
       </div>
       <div class="right2">
         <p class="newlecture">
