An attempt to confirm connection after Windows Re-install

--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -46,19 +46,19 @@
           <p class="title2">Behold the true journalist inside of you.</p>
         </div>
         <div class="media-element-clubs">
-          <a href=""><img src="img/literature.jpg" alt="" /></a>
+          <a href=""><img src="/img/literature.jpg" alt="" /></a>
           <p class="title">Literature Club</p>
           <p class="title2">
             Here to help you harness your full literary potential.
           </p>
         </div>
         <div class="media-element-clubs">
-          <a href=""><img src="img/robotics.jpg" alt="" /></a>
+          <a href=""><img src="/img/robotics.jpg" alt="" /></a>
           <p class="title">Robotics Club</p>
           <p class="title2">Make yourself sound intelligent</p>
         </div>
         <div class="media-element-clubs">
-          <a href=""><img src="img/eco.jpg" alt="" /></a>
+          <a href=""><img src="/img/eco.jpg" alt="" /></a>
           <p class="title">Eco Club</p>
           <p class="title2">Green, Green Grass</p>
         </div>
