Took clubs page down due to errors

--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -35,7 +35,9 @@
         <li><a href="/Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
-    <div class="gallery">
+
+    <h1>This Page Is under Maintenence</h1>
+   <!-- <div class="gallery">
       <h4>PSS CLUBS</h4>
       <div class="media-scroller snaps-inline">
         <div class="media-element-clubs">
@@ -63,6 +65,6 @@
           <p class="title2">Green, Green Grass</p>
         </div>
       </div>
-    </div>
+    </div>-->
   </body>
 </html>
