--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -25,8 +25,8 @@
     <div class="wrapper">
       <ul>
         <li>
-          <a href="index.html"
-            ><img height="150px" src="img/SRC logo.png" alt="The SRC Logo"
+          <a href="/index.html"
+            ><img height="150px" src="/img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
         <li><a href="/Pages/SRC/SRC.html">2022/2023 SRC</a></li>
