--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <ul>
         <li>
-          <a href="index.html"
+          <a href="/index.html"
             ><img height="150px" src="/img/SRC logo.png" alt="The SRC Logo"
           /></a>
         </li>
