Testing Git connection w/ Hostinger

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="null">div</p>
         <h2>WELCOME TO THE <span class="red">2022/2023 SRC</span> WEBSITE</h2>
         <h1>SHOOT FOR THE</h1>
-        <h1 class="stars">STARS</h1>
+        <h1 class="stars">HELP</h1>
         <a href="./PDF/2023 High School Calendar.pdf"><button>EVENTS</button></a>
         <a href="http://www.pss.com.na/galerie?lang=en"><button>GALLERY</button></a>
         <div class="bottom"></div>
