Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile)

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -99,7 +99,7 @@
       </div>
     </div>
 
-    <div class="intro">
+    <!--<div class="intro">
       <div class="left2">
         <img class="chair-img" src="/img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
       </div>
@@ -117,7 +117,7 @@ will face any challenge head-on and with immense enthusiasm.
           <span class="italic">Chairperson of the SRC</span>
         </p>
       </div>
-    </div>
+    </div>-->
 
     </div>
   </body>
