Changes to mobile version to accomodate for IOS webkit issues (Scrolling gallery converted to fixed one on mobile) part 3

--- a/Pages/Orientation/gr8.html
+++ b/Pages/Orientation/gr8.html
@@ -30,7 +30,7 @@
 
    <h4>
     Grade 8 Orientation is a two-to-three-week period where teamwork, challenge and determination all come together; students prove that they belong to the high school and undergo many fun and team building exercises to test this.  The 2023 Orientation was one of the most memorable and successful ones yet – beautiful friendships and bonds were formed. Our Grade 8 students are proud PSS High School students, and among many other things, have developed great teamwork, communication and critical thinking skills! 
-We love you Grade 8s!
+<br><br><span class="stars italic">We love you Grade 8s! ❤</span>
   </h4>
 
 
