Bug Fixes and publishing of clubs page

--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/Pages/SRC/srcstyles.css" />
-    <link rel="stylesheet" href="./clubs.css" /> 
-    <link rel="shortcut icon" href="/img/SRC logo.png logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./clubs.css" />
+    <link
+      rel="shortcut icon"
+      href="/img/SRC logo.png logo.png"
+      type="image/x-icon"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
       rel="stylesheet"
@@ -35,36 +38,32 @@
         <li><a href="/Pages/Clubs/Clubs.html">Clubs</a></li>
       </ul>
     </div>
-
-    <h4>This Page Is under Maintenence</h4>
-   <!-- <div class="gallery">
-      <h4>PSS CLUBS</h4>
+    <h4>PSS CLUBS</h4>
+    <div class="gallery">
       <div class="media-scroller snaps-inline">
-        <div class="media-element-clubs">
-          <a href="./Clubs/newspaper/newspaper.html"
-            ><img src="img/paper.jpg" alt="Our Newspaper!"
-          /></a>
+        <div class="media-element">
+          <img src="/img/paper.jpg" alt="Our Newspaper!" />
           <p class="title">Newspaper Club</p>
           <p class="title2">Behold the true journalist inside of you.</p>
         </div>
-        <div class="media-element-clubs">
-          <a href=""><img src="/img/literature.jpg" alt="" /></a>
+        <div class="media-element">
+          <img src="/img/literature.jpg" alt="" />
           <p class="title">Literature Club</p>
           <p class="title2">
             Here to help you harness your full literary potential.
           </p>
         </div>
-        <div class="media-element-clubs">
-          <a href=""><img src="/img/robotics.jpg" alt="" /></a>
+        <div class="media-element">
+          <img src="/img/robotics.jpg" alt="" />
           <p class="title">Robotics Club</p>
           <p class="title2">Make yourself sound intelligent</p>
         </div>
-        <div class="media-element-clubs">
-          <a href=""><img src="/img/eco.jpg" alt="" /></a>
+        <div class="media-element">
+          <img src="/img/eco.jpg" alt="" />
           <p class="title">Eco Club</p>
           <p class="title2">Green, Green Grass</p>
         </div>
       </div>
-    </div>-->
+    </div>
   </body>
 </html>
