1. Final Completion of Newspaper Page, including updated images as well as final text. 2. Final bug resolving to all pages before final publishment 3. Title of index.html changed for SEO purposes

--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -42,18 +42,18 @@
     <div class="gallery">
       <div class="media-scroller snaps-inline">
         <div class="media-element">
-          <img src="/img/paper.jpg" alt="Our Newspaper!" />
-          <p class="title">Newspaper Club</p>
-          <p class="title2">Behold the true journalist inside of you.</p>
+          <img src="/img/paper.png" alt="Our Newspaper!" />
+          <p class="title">The West Coast Lampoon: “THE LIVING REFLECTION OF OUR WORLDLINESS.”</p>
+          <p class="title2">The PSS Newspaper Club runs the publication called The West Coast Lampoon, with an issue released every two weeks. Forming the contents of the newspaper are student–written articles, student–formulated Q and A columns, student–answered polls, and much more, all either commissioned to members or submitted by non–members. Trained here are skills in journalism, skills in computer–aided design of the newspaper itself, and skills in writing.</p>
         </div>
         <div class="media-element">
           <img src="/img/literature.jpg" alt="" />
-          <p class="title">Literature Club</p>
+          <p class="title">LITERATURE THAT IS BOTH BEAUTIFUL AND TANGIBLE.</p>
           <p class="title2">
-            Here to help you harness your full literary potential.
+            At the PSS Literature Club, members write stories under topics (prompts) given on a biweekly basis, compiled into and released as a physical anthology at the end of the term. Members also partake in season–specific literary activities, such as love–letter writing on Valentine’s. It is a place where hobbyists and aspiring authors alike can hone their skills with the pen. (Or in the modern age, the keyboard).
           </p>
         </div>
-        <div class="media-element">
+      <!--  <div class="media-element">
           <img src="/img/robotics.jpg" alt="" />
           <p class="title">Robotics Club</p>
           <p class="title2">Make yourself sound intelligent</p>
@@ -62,7 +62,7 @@
           <img src="/img/eco.jpg" alt="" />
           <p class="title">Eco Club</p>
           <p class="title2">Green, Green Grass</p>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
