--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="/img/SRC logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta name="google-site-verification" content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE" />
-    <title>PSS SRC</title>
+    <title>The PSS SRC's Website: Your hub for Information and Resources</title>
   </head>
   <body>
     <input type="checkbox" id="active" />
