Some minor bug fixes like amending the broken src page background

--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -30,7 +30,7 @@
     </div>
 
     
-    <div class="section">`
+    <div class="section">
     <h6>THE <span class="underline">STRONGEST</span>, MOST <span class="underline">PASSIONATE</span> AND <span class="underline">HARDWORKING</span> SRC <span class="red bold">EVER</span></h6>
     </div>
     <div class="gallery">
