--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -31,7 +31,7 @@
 
     
     <div class="section">
-    <h6>THE <span class="underline">STRONGEST</span>, MOST <span class="underline">PASSIONATE</span> AND <span class="underline">INSANE</span> SRC <span class="red bold">EVER</span></h6>
+    <h6>THE <span class="underline">STRONGEST</span>, MOST <span class="underline">PASSIONATE</span> AND <span class="underline">HARDWORKING</span> SRC <span class="red bold">EVER</span></h6>
     </div>
     <div class="gallery">
       <h4>2022/2023 SRC</h4>
