--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="The Student Representative Council (SRC) website of the Private School Swakopmund for students to stay informed and engaged with our school community and to help voice our students opinions in addition to promoting participation in our events.">
+    <meta
+      name="description"
+      content="The Student Representative Council (SRC) website of the Private School Swakopmund for students to stay informed and engaged with our school community and to help voice our students opinions in addition to promoting participation in our events."
+    />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="shortcut icon" href="/img/SRC logo.png" type="image/x-icon" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <meta name="google-site-verification" content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE" />
+    <meta
+      name="google-site-verification"
+      content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"
+    />
     <title>The PSS SRC's Website: Your hub for Information and Resources</title>
   </head>
   <body>
@@ -34,15 +40,23 @@
         <h2>WELCOME TO THE <span class="red">2022/2023 SRC</span> WEBSITE</h2>
         <h1>SHOOT FOR THE</h1>
         <h1 class="stars">STARS</h1>
-        <a href="./PDF/2023 High School Calendar.pdf"><button>EVENTS</button></a>
-        <a href="http://www.pss.com.na/galerie?lang=en"><button>GALLERY</button></a>
+        <a href="./PDF/2023 High School Calendar.pdf"
+          ><button>EVENTS</button></a
+        >
+        <a href="http://www.pss.com.na/galerie?lang=en"
+          ><button>GALLERY</button></a
+        >
         <div class="bottom"></div>
       </div>
     </div>
 
     <div class="intro">
       <div class="left">
-        <img class="chair-img" src="img\anco.png" alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC" />
+        <img
+          class="chair-img"
+          src="img\anco.png"
+          alt="Anco de Koning, chairperson of the 2022/2023 PSS SRC"
+        />
       </div>
       <div class="right">
         <h3>
@@ -56,5 +70,97 @@
         </p>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="footer__addr">
+        <h1 class="footer__logo"><img width="30%" src="/img/SRC logo.png" alt="SRC LOGO"></h1>
+
+        <h2>Contact</h2>
+
+        <address>
+          Künhast Street, Swakopmund, Namibia<br/>
+
+          <a class="footer__btn" href="/Pages/Suggestions/Form.html">Contact Us</a>
+        </address>
+      </div>
+
+      <ul class="footer__nav">
+        <li class="nav__item">
+          <h2 class="nav__title">Media</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Online</a>
+            </li>
+
+            <li>
+              <a href="#">Print</a>
+            </li>
+
+            <li>
+              <a href="#">Alternative Ads</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item nav__item--extra">
+          <h2 class="nav__title">Technology</h2>
+
+          <ul class="nav__ul nav__ul--extra">
+            <li>
+              <a href="#">Hardware Design</a>
+            </li>
+
+            <li>
+              <a href="#">Software Design</a>
+            </li>
+
+            <li>
+              <a href="#">Digital Signage</a>
+            </li>
+
+            <li>
+              <a href="#">Automation</a>
+            </li>
+
+            <li>
+              <a href="#">Artificial Intelligence</a>
+            </li>
+
+            <li>
+              <a href="#">IoT</a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item">
+          <h2 class="nav__title">Legal</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+
+            <li>
+              <a href="#">Terms of Use</a>
+            </li>
+
+            <li>
+              <a href="#">Sitemap</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="legal">
+        <p>&copy; AEROS WEB DESIGN 2023</p>
+
+        <div class="legal__links">
+         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <span
+            >Click Me, or perish.</span
+          ></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
