--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta
       name="google-site-verification"
       content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"
+    <meta 
+    name="keyword"
+    content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council">
     />
     <title>The PSS SRC's Website: Your hub for Information and Resources</title>
   </head>
