--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta
       name="google-site-verification"
-      content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"
-    <meta 
+      content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"/>
+    <meta
     name="keyword"
-    content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council">
+    content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council"
     />
+      
     <title>The PSS SRC's Website: Your hub for Information and Resources</title>
   </head>
   <body>
