minor bug fixes

--- a/Pages/Orientation/gr8.html
+++ b/Pages/Orientation/gr8.html
@@ -24,7 +24,7 @@
   </ul>
 </div>
     
-    <h1>Orientation</h1>
+    <h1>Gr. 8 Orientation</h1>
      <video class="orientation-vid" src="/Video/2023 First Week Grade 8.mp4" controls autoplay muted></video>
    </div>
 
