"Changes to footer"

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <meta
       name="google-site-verification"
-      content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"/>
-    <meta
-    name="keyword"
-    content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council"
+      content="A7h-XLp7jdFjC7KMSmJjuR8XhLJiDh76fkMbFHvMazE"
     />
-      
+    <meta
+      name="keyword"
+      content="PSS, SRC, PSS SRC, pss, src, pss src, Private School Swakopmund, Student Representative Council, Private School Swakopmund SRC, Private School Swakopmund Student Representative Council"
+    />
+
     <title>The PSS SRC's Website: Your hub for Information and Resources</title>
   </head>
   <body>
@@ -77,42 +78,52 @@
 
     <footer class="footer">
       <div class="footer__addr">
-        <h1 class="footer__logo"><img width="30%" src="/img/SRC logo.png" alt="SRC LOGO"></h1>
+        <h1 class="footer__logo">
+          <img
+            width="30%"
+            src="/img/Privatschule-Swakopmund-Logo.webp"
+            alt="SRC LOGO"
+          />
+        </h1>
 
-        <h2>Contact</h2>
+        <h2>Address</h2>
 
         <address>
-          Künhast Street, Swakopmund, Namibia<br/>
+          Künhast Street, Swakopmund, Namibia<br />
 
-          <a class="footer__btn" href="/Pages/Suggestions/Form.html">Contact Us</a>
+          <a class="footer__btn" href="/Pages/Suggestions/Form.html"
+            >Make a Suggestion</a
+          >
         </address>
       </div>
 
       <ul class="footer__nav">
         <li class="nav__item">
-          <h2 class="nav__title">Media</h2>
+          <h2 class="nav__title">Contact the SRC</h2>
 
           <ul class="nav__ul">
             <li>
-              <a href="#">Online</a>
+              <a href="#"
+                ><span class="stars">Chairperson:</span> <br />Anco:
+                anco@pss-src.org</a
+              >
             </li>
 
             <li>
-              <a href="#">Print</a>
-            </li>
-
-            <li>
-              <a href="#">Alternative Ads</a>
+              <a href="#"
+                ><span class="stars">Vice Chairpersons:</span> <br />Amit:
+                amit@pss-src.org<br />Kyra: kyra@pss-src.org</a
+              >
             </li>
           </ul>
         </li>
 
         <li class="nav__item nav__item--extra">
-          <h2 class="nav__title">Technology</h2>
+          <h2 class="nav__title">Contact PSS</h2>
 
           <ul class="nav__ul nav__ul--extra">
             <li>
-              <a href="#">Hardware Design</a>
+              <a href="#"><span class="red">Secratary:</span><br>secratary@pss-src.org</a>
             </li>
 
             <li>
@@ -160,9 +171,9 @@
         <p>&copy; AEROS WEB DESIGN 2023</p>
 
         <div class="legal__links">
-         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"> <span
-            >Click Me, or perish.</span
-          ></a>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <span>Click Me, or perish.</span></a
+          >
         </div>
       </div>
     </footer>
