--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles.css">
     <link rel="stylesheet" href="./srcstyles.css">
-    <link rel="shortcut icon" href="//img/SRC logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/SRC logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -119,6 +119,94 @@ will face any challenge head-on and with immense enthusiasm.
       </div>
     </div>-->
 
+
+    <footer class="footer">
+      <div class="footer__addr">
+        <a href="https://pss.com.na"></a><h1 class="footer__logo">
+          <img
+            width="20%"
+            src="/img/Privatschule-Swakopmund-Logo.webp"
+            alt="PSS Logo"
+          /></a>
+        </h1>
+
+        <h2>Address:</h2>
+
+        <address>
+          Künhast Street, Swakopmund, Namibia<br />
+
+          <a class="footer__btn" href="/Pages/Suggestions/Form.html"
+            >Make a Suggestion</a
+          >
+        </address>
+      </div>
+
+      <ul class="footer__nav">
+        <li class="nav__item">
+          <h2 class="nav__title">Contact the SRC:</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#"
+                ><span class="stars">Chairperson:</span> <br />Anco:
+                anco@pss-src.org</a
+              >
+            </li>
+
+            <li>
+              <a href="#"
+                ><span class="stars">Vice Chairpersons:</span> <br />Amit:
+                amit@pss-src.org<br/>Kyra: kyra@pss-src.org</a
+              >
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav__item nav__item--extra">
+          <h2 class="nav__title">Contact PSS:</h2>
+
+          <ul class="nav__ul nav__ul--extra">
+            <li>
+              <a href="#"><span class="red">Secratary:</span><br>secratary@pss-src.org</a>
+            </li>
+
+            <li>
+              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse@pss.co.na</a>
+            </li>
+
+            
+          </ul>
+        </li>
+
+        <li class="nav__item">
+          <h2 class="nav__title">Legal</h2>
+
+          <ul class="nav__ul">
+            <li>
+              <a href="#">Privacy Policy</a>
+            </li>
+
+            <li>
+              <a href="#">Terms of Use</a>
+            </li>
+
+            <li>
+              <a href="#">Sitemap</a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+
+      <div class="legal">
+        <p>&copy; AEROS WEB DESIGN 2023</p>
+
+        <div class="legal__links">
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <span>Click Me, or perish.</span></a
+          >
+        </div>
+      </div>
+    </footer>
     </div>
   </body>
 </html>
