changes to footer and optimizations

--- a/Pages/Clubs/Clubs.html
+++ b/Pages/Clubs/Clubs.html
@@ -53,20 +53,11 @@
             At the PSS Literature Club, members write stories under topics (prompts) given on a biweekly basis, compiled into and released as a physical anthology at the end of the term. Members also partake in season–specific literary activities, such as love–letter writing on Valentine’s. It is a place where hobbyists and aspiring authors alike can hone their skills with the pen. (Or in the modern age, the keyboard).
           </p>
         </div>
-      <!--  <div class="media-element">
-          <img src="/img/robotics.jpg" alt="" />
-          <p class="title">Robotics Club</p>
-          <p class="title2">Make yourself sound intelligent</p>
         </div>
-        <div class="media-element">
-          <img src="/img/eco.jpg" alt="" />
-          <p class="title">Eco Club</p>
-          <p class="title2">Green, Green Grass</p>
-        </div> -->
       </div>
     </div>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__addr">
         <a href="https://pss.com.na"></a><h1 class="footer__logo">
           <img
@@ -141,7 +132,7 @@
             </li>
           </ul>
         </li>
-      </ul>
+      </ul> -->
 
       <div class="legal">
         <p>&copy; AEROS WEB DESIGN 2023</p>
