--- a/Pages/SRC/SRC.html
+++ b/Pages/SRC/SRC.html
@@ -120,7 +120,7 @@ will face any challenge head-on and with immense enthusiasm.
     </div>-->
 
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__addr">
         <a href="https://pss.com.na"></a><h1 class="footer__logo">
           <img
@@ -206,7 +206,7 @@ will face any challenge head-on and with immense enthusiasm.
           >
         </div>
       </div>
-    </footer>
+    </footer> -->
     </div>
   </body>
 </html>
