--- a/Pages/Suggestions/Form.html
+++ b/Pages/Suggestions/Form.html
@@ -39,7 +39,7 @@
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSdv8IzI_X6zrjzXZs3rsj11e19aeXPi8VzGbucRSmwJSFcnVQ/viewform?embedded=true"
         width="100%"
-        height="100%"
+        height="90%"
         frameborder="0"
         marginheight="0"
         marginwidth="0"
@@ -62,9 +62,9 @@
         <address>
           Künhast Street, Swakopmund, Namibia<br />
 
-          <a class="footer__btn" href="/Pages/Suggestions/Form.html"
+          <!-- <a class="footer__btn" href="/Pages/Suggestions/Form.html"
             >Make a Suggestion</a
-          >
+          > -->
         </address>
       </div>
 
@@ -124,7 +124,7 @@
         </li>
       </ul>
 
-      <div class="legal">
+      <!-- <div class="legal">
         <p>&copy; AEROS WEB DESIGN 2023</p>
 
         <div class="legal__links">
@@ -132,7 +132,7 @@
             <span>Click Me, or perish.</span></a
           >
         </div>
-      </div>
+      </div> -->
     </footer>
   </body>
 </html>
