--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer class="footer">
       <div class="footer__addr">
-        <a href="https://pss.com.na"></a><h1 class="footer__logo">
+        <a href="https://pss.com.na"><h1 class="footer__logo">
           <img
             width="20%"
             src="/img/Privatschule-Swakopmund-Logo.webp"
@@ -134,7 +134,7 @@
           </ul>
         </li>
 
-        <li class="nav__item">
+        <!-- <li class="nav__item">
           <h2 class="nav__title">Legal</h2>
 
           <ul class="nav__ul">
@@ -162,7 +162,7 @@
           >
         </div>
       </div>
-    </footer>
+    </footer> -->
     
   </body>
 </html>
