Alot, don't ask.

--- a/index.html
+++ b/index.html
@@ -123,46 +123,18 @@
 
           <ul class="nav__ul nav__ul--extra">
             <li>
-              <a href="#"><span class="red">Secratary:</span><br>secratary@pss-src.org</a>
+              <a href="#"><span class="red">Secretary:</span><br>secretary@pss.com.na</a>
             </li>
 
             <li>
-              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse@pss.co.na</a>
+              <a href="#"><span class="red">HS Phase Head:</span><br>Ilse Liechti: ilse.liecthi@pss.com.na</a>
             </li>
 
             
           </ul>
         </li>
 
-        <!-- <li class="nav__item">
-          <h2 class="nav__title">Legal</h2>
-
-          <ul class="nav__ul">
-            <li>
-              <a href="#">Privacy Policy</a>
-            </li>
-
-            <li>
-              <a href="#">Terms of Use</a>
-            </li>
-
-            <li>
-              <a href="#">Sitemap</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-
-      <div class="legal">
-        <p>&copy; AEROS WEB DESIGN 2023</p>
-
-        <div class="legal__links">
-          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <span>Click Me, or perish.</span></a
-          >
-        </div>
-      </div>
-    </footer> -->
+    </footer>
     
   </body>
 </html>
