--- a/Pages/Orientation/gr8.html
+++ b/Pages/Orientation/gr8.html
@@ -31,10 +31,10 @@
    <h4>
     Grade 8 Orientation is a two-to-three-week period where teamwork, challenge and determination all come together; students prove that they belong to the high school and undergo many fun and team building exercises to test this.  The 2023 Orientation was one of the most memorable and successful ones yet – beautiful friendships and bonds were formed. Our Grade 8 students are proud PSS High School students, and among many other things, have developed great teamwork, communication and critical thinking skills! 
 <br><br><span class="stars italic">We love you Grade 8s! ❤</span>
+<a href="./gr8.pdf"><button>Gr. 8 Booklet</button></a>
   </h4>
+  
 
-
-  </body>
   <footer class="footer">
     <div class="footer__addr">
       <a href="https://pss.com.na"></a><h1 class="footer__logo">
@@ -122,4 +122,6 @@
       </div>
     </div>
   </footer>
+  </body>
+  
 </html>
